backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels: 
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: backend:v3
        ports:
        - containerPort: 8000
