database.yml
# Currently in progress - not yet ready to be deploy

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-statefulset
  labels: 
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: pvc-volume
      volumes:
      - name: pvc-volume
        persistentVolumeClaim:
          claimName: db-pvc
